# iit-gazebo-worlds-pkg

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
3DGems/: object.launch
arucoBoxes/: README.md
arucoBoxes/launch/: load_example.launch  main.launch
arucoBoxes/meshes/: container.stl
arucoBoxes/script/: pose_gazebo_to_tf.py
arucoBoxes/urdf/: box.urdf.xacro  container.urdf.xacro  low_table.urdf.xacro  table.urdf.xacro
arucoBoxes/world/: world.world
genericShapes/urdf/: cylinder.urdf.xacro
launch/: spawn_brick_box_on_high_table.launch  spawn_brick_box_on_table.launch  spawn_brick_box_on_table_relax.launch  spawn_brick_box_on_table_rviz.launch  spawn_dock_station.launch  spawn_high_table.launch  spawn_husky.launch  spawn_mud_box.launch  spawn_sdf.launch  spawn_small_blue_box.launch  spawn_spot_mini_explorer.launch  spawn_spot_mini_sensored.launch  spawn_table.launch  spawn_table_relax.launch  spawn_table_rviz.launch  table_box.launch  view_table_box.launch
models/brick_box/: model.sdf
models/small_blue_box/: model.config  model.sdf
models/spot_mini_explorer/: metadata.pbtxt
models/spot_mini_sensored/: metadata.pbtxt  model.sdf
panelShelf/: README.md
panelShelf/launch/: spawn_shelf.launch
panelShelf/urdf/: shelf.urdf.xacro  shelf_panel_macro.xacro
simpleKeyboard/config/: keyboard.rviz
simpleKeyboard/launch/: keyboard.launch  load_keyboard.launch
simpleKeyboard/meshes/: arrow.dae  arrowCircle.dae  closeGripper.dae  cross.dae  openGripper.dae
simpleKeyboard/urdf/: keyboard.urdf.xacro  (+2 more)
worlds/: table_box.world
(+54 files in other folders)
