<?xml version="1.0"?>
<package format="2">
  <name>iit_gazebo_worlds_pkg</name>
  <version>1.0.0</version>
  <description>
    iit_gazebo_worlds_pkg is a collection of gazebo worlds useful for simulations.
  </description>
  <license>Apache 2.0</license>
  <author email="liana.bertoni@iit.it">HHCM</author>
  <maintainer email="liana.bertoni@iit.it">liana</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>